--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 			<!-- Cards -->
 			<div class="animated zoomIn responsive filter side-hustle future">
 				<div class="gallery">
-					<a href="" target="_blank">
+					<a href="https://github.com/vishal0027/Software_Design_Practice" target="_blank">
 						<div class="card card-profile work-card-profile">
 							 <div class="card-cover" style="height: 200px; background-image: url('assets/images/software.jpg');">
 							 </div>
@@ -195,6 +195,7 @@
 			<!-- Cards -->
 		<div class="animated zoomIn responsive filter side-hustle future">
 	 		<div class="gallery">
+				<a href="" target ="_blank">
 	 		 			<div class="card card-profile work-card-profile">
 	 		 				 <div class="card-cover" style="height: 200px; background-image: url('assets/images/yorku.jpeg');">
 	 		 				 </div>
@@ -207,6 +208,7 @@
 	 		 						 </p>
 	 		 				 </div>
 	 		 			 </div>
+				</a>
 	 		</div>
  		</div>
  			<!-- End of Cards -->
