--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 			<!-- Cards -->
 		<div class="animated zoomIn responsive filter side-hustle future">
 	 		<div class="gallery">
-				<a href="" target ="_blank">
+				<a href="https://github.com/vishal0027/YorkU_Simulator" target ="_blank">
 	 		 			<div class="card card-profile work-card-profile">
 	 		 				 <div class="card-cover" style="height: 200px; background-image: url('assets/images/yorku.jpeg');">
 	 		 				 </div>
